@@ -52,9 +52,9 @@ scl-new value nlist
 
 \ Check the number of numbers out of sequence
 
-: nnode-out-sequence ( n1 n2 flag n3 -- n4 n5 true = Count the number of out of sequence number, n1: count n2:previous float n3: number )
+: nnode-out-sequence ( n1 n2 flag n3 -- n4 n5 true = Count the number of out of sequence number, n1: count n2:previous number n3: number )
   swap IF
-    tuck > IF >r 1+ r> THEN       \ Compare current float with previous float, increment counter if out of sequence
+    tuck > IF >r 1+ r> THEN       \ Compare current number with previous number increment counter if out of sequence
   ELSE
     nip                           \ First call, no check
   THEN
