@@ -1,4 +1,5 @@
 0.9.0
+* jos: new module: JSON output stream (2010-11-20)
 * snl,scl,dnl,dcl: new word: *-sort (2010-08-23)
 * car,dcl,bar,chs,dnl,hct,hnt,scl,str: new word: *-execute? (2010-08-07)
 0.8.0
